--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -30,7 +30,11 @@
         "showPreviousTabInGroup": "Переход на предыдущую вкладку в группе",
         "toggleMaximized": "Переключение максимизации"
       },
-      "enhancedPreview": "Позволяет определить, следует ли отображать дополнительную информацию о вкладке в горизонтальных полосах вкладок.",
+      "enhancedPreview": {
+        "classic": "Отображение простого предварительного просмотра вкладки с основной информацией.",
+        "enhanced": "Отображение расширенного предварительного просмотра вкладки с дополнительной информацией.",
+        "visual": "Отображение визуального предварительного просмотра вкладки."
+      },
       "file": {
         "browse": "Просмотреть"
       },
@@ -79,6 +83,7 @@
     "editor": {
       "dirtyEncoding": "Файл загрязнен. Пожалуйста, сначала сохраните его, а затем откройте с другой кодировкой.",
       "editor.codeActionWidget.showHeaders": "Включить/выключить показ заголовков групп в меню действий кода.",
+      "editor.experimental.pasteActions.enabled": "Включение/выключение запуска правок из расширений при вставке.",
       "editor.formatOnSaveMode.modificationsIfAvailable": "Попытается отформатировать только модификации (требуется контроль исходного текста). Если контроль источника не может быть использован, то будет отформатирован весь файл.",
       "editor.inlayHints.enabled1": "Подсказки инкрустации отображаются по умолчанию и скрываются при нажатии `Ctrl+Alt`.",
       "editor.inlayHints.enabled2": "Подсказки инкрустации скрыты по умолчанию и отображаются при нажатии `Ctrl+Alt`.",
@@ -216,6 +221,7 @@
         "offset-title": "Байты для смещения памяти от {0}"
       },
       "editable": {
+        "apply": "Применять изменения",
         "clear": "Четкие изменения"
       },
       "endianness": "Endianness",
@@ -323,6 +329,9 @@
       "watchMode": "Запуск наблюдателя на разрабатываемом плагине"
     },
     "plugin-ext": {
+      "authentication-main": {
+        "loginTitle": "Вход в систему"
+      },
       "plugins": "Плагины",
       "webviewTrace": "Управляет трассировкой связи с веб-вью.",
       "webviewWarnIfUnsecure": "Предупреждает пользователей о том, что веб-просмотры в настоящее время развернуты небезопасно."
