vsx-registry: add hint to fetching extensions error
Clarifies the error by suggesting it could be caused by network configuration issues.

Contributed by STMicroelectronics
Signed-off-by: Samuel BERG <samuel.berg@st.com>

--- a/packages/core/i18n/nls.json
+++ b/packages/core/i18n/nls.json
@@ -434,6 +434,7 @@
     "vsx-registry": {
       "downloadCount": "Download count: {0}",
       "errorFetching": "Error fetching extensions.",
+      "errorFetchingHint": "This could be caused by network configuration issues.",
       "failedInstallingVSIX": "Failed to install {0} from VSIX.",
       "invalidVSIX": "The selected file is not a valid \"*.vsix\" plugin.",
       "license": "License: {0}",
