--- a/packages/core/i18n/nls.es.json
+++ b/packages/core/i18n/nls.es.json
@@ -113,6 +113,7 @@
       }
     },
     "filesystem": {
+      "copiedToClipboard": "Copiado el enlace de descarga en el portapapeles.",
       "copyDownloadLink": "Copiar el enlace de descarga",
       "dialog": {
         "initialLocation": "Ir a la ubicación inicial",
@@ -142,7 +143,10 @@
     "getting-started": {
       "apiComparator": "{0} Compatibilidad con la API",
       "newExtension": "Construir una nueva extensión",
-      "newPlugin": "Creación de un nuevo plugin"
+      "newPlugin": "Creación de un nuevo plugin",
+      "startup-editor": {
+        "welcomePage": "Abra la página de bienvenida, con contenidos que le ayudarán a empezar a utilizar {0} y las extensiones."
+      }
     },
     "git": {
       "aFewSecondsAgo": "hace unos segundos",
