--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -113,6 +113,7 @@
       }
     },
     "filesystem": {
+      "copiedToClipboard": "Скопировал ссылку на скачивание в буфер обмена.",
       "copyDownloadLink": "Скопировать ссылку для скачивания",
       "dialog": {
         "initialLocation": "Перейти к начальному местоположению",
@@ -142,7 +143,10 @@
     "getting-started": {
       "apiComparator": "{0} Совместимость API",
       "newExtension": "Построение нового расширения",
-      "newPlugin": "Создание нового плагина"
+      "newPlugin": "Создание нового плагина",
+      "startup-editor": {
+        "welcomePage": "Откройте страницу приветствия, содержащую материалы, помогающие начать работу с {0} и расширениями."
+      }
     },
     "git": {
       "aFewSecondsAgo": "несколько секунд назад",
