--- a/packages/core/i18n/nls.zh-cn.json
+++ b/packages/core/i18n/nls.zh-cn.json
@@ -113,6 +113,7 @@
       }
     },
     "filesystem": {
+      "copiedToClipboard": "将下载链接复制到剪贴板。",
       "copyDownloadLink": "复制下载链接",
       "dialog": {
         "initialLocation": "转到初始位置",
@@ -142,7 +143,10 @@
     "getting-started": {
       "apiComparator": "{0} API兼容性",
       "newExtension": "构建一个新的扩展",
-      "newPlugin": "构建一个新的插件"
+      "newPlugin": "构建一个新的插件",
+      "startup-editor": {
+        "welcomePage": "打开欢迎页面,其中包含帮助开始使用{0} 和扩展程序的内容。"
+      }
     },
     "git": {
       "aFewSecondsAgo": "几秒钟前",
