--- a/packages/core/i18n/nls.hu.json
+++ b/packages/core/i18n/nls.hu.json
@@ -434,6 +434,7 @@
     "vsx-registry": {
       "downloadCount": "Letöltési szám: {0}",
       "errorFetching": "Hiba a kiterjesztések lekérdezésében.",
+      "errorFetchingConfigurationHint": "Ezt hálózati konfigurációs problémák okozhatják.",
       "failedInstallingVSIX": "Nem sikerült telepíteni a {0} oldalt a VSIX-ből.",
       "invalidVSIX": "A kiválasztott fájl nem érvényes \"*.vsix\" bővítmény.",
       "license": "Engedély: {0}",
